@@ -233,5 +233,6 @@ echo "    Installation Lib Dir:" "$libdir"
 echo "Installation Include Dir:" "$includedir"
 echo ""
 echo "See also src/sl-feat.h for various features."
-echo "Type 'make' to build normal library."
-echo "On ELF systems, type 'make elf' to create ELF shared library."
+echo "Type 'make' to build a shared version of the library."
+echo "Type 'make help' for more options"
+echo ""
